remove some Kodi references

--- a/pvr.mediaportal.tvserver/addon.xml.in
+++ b/pvr.mediaportal.tvserver/addon.xml.in
@@ -13,60 +13,60 @@
     point="xbmc.pvrclient"
     library_@PLATFORM@="@LIBRARY_FILENAME@"/>
   <extension point="xbmc.addon.metadata">
-    <summary lang="af_ZA">Kodi voorprogram vir die MediaPortal TV Bediener (ffmpeg + tsreader weergawe)</summary>
-    <summary lang="be_BY">Kodi frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
-    <summary lang="bg_BG">Kodi клиент за ТВ сървъра MediaPortal (ffmpeg + tsreader версия)</summary>
-    <summary lang="ca_ES">Frontal Kodi pel servidor de TV MediaPortal (versió ffmpeg + tsreader)</summary>
-    <summary lang="cs_CZ">Rozhraní Kodi pro televizní server MediaPortal (verze ffmpeg + tsreader)</summary>
-    <summary lang="cy_GB">Blaen Kodi ar gyfer Gweinydd Teledu MediaPortal (fersiwn ffmpeg + tsreader)</summary>
-    <summary lang="da_DK">Kodi frontend til MediaPortal TV server (ffmpeg + tsreader version)</summary>
-    <summary lang="de_DE">Kodi Oberfläche für den MediaPortal TV Server (ffmpeg + tsreader Version)</summary>
-    <summary lang="el_GR">Frontend του Kodi για το διακομιστή MediaPortal TV (έκδοση ffmpeg + tsreader)</summary>
-    <summary lang="en_AU">Kodi frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
-    <summary lang="en_GB">Kodi frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
-    <summary lang="en_NZ">Kodi frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
-    <summary lang="en_US">Kodi frontend for the MediaPortal TV Server (FFmpeg + TSReader version)</summary>
-    <summary lang="es_AR">Interfaz Kodi para el MediaPortal TV Server (versión ffmpeg + tsreader)</summary>
-    <summary lang="es_ES">Interfaz Kodi para el MediaPortal TV Server (versión ffmpeg + tsreader)</summary>
-    <summary lang="et_EE">Kodi esi MediaPortal TV serverile (ffmpeg + tsreader versioon)</summary>
-    <summary lang="fi_FI">Kodi frontend MediaPortal TV-serverille (ffmpeg + tsreader)</summary>
-    <summary lang="fr_CA">Frontal Kodi pour le serveur MediaPortal TV (version ffmpeg + tsreader)</summary>
+    <summary lang="af_ZA">MrMC voorprogram vir die MediaPortal TV Bediener (ffmpeg + tsreader weergawe)</summary>
+    <summary lang="be_BY">MrMC frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
+    <summary lang="bg_BG">MrMC клиент за ТВ сървъра MediaPortal (ffmpeg + tsreader версия)</summary>
+    <summary lang="ca_ES">Frontal MrMC pel servidor de TV MediaPortal (versió ffmpeg + tsreader)</summary>
+    <summary lang="cs_CZ">Rozhraní MrMC pro televizní server MediaPortal (verze ffmpeg + tsreader)</summary>
+    <summary lang="cy_GB">Blaen MrMC ar gyfer Gweinydd Teledu MediaPortal (fersiwn ffmpeg + tsreader)</summary>
+    <summary lang="da_DK">MrMC frontend til MediaPortal TV server (ffmpeg + tsreader version)</summary>
+    <summary lang="de_DE">MrMC Oberfläche für den MediaPortal TV Server (ffmpeg + tsreader Version)</summary>
+    <summary lang="el_GR">Frontend του MrMC για το διακομιστή MediaPortal TV (έκδοση ffmpeg + tsreader)</summary>
+    <summary lang="en_AU">MrMC frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
+    <summary lang="en_GB">MrMC frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
+    <summary lang="en_NZ">MrMC frontend for the MediaPortal TV Server (ffmpeg + tsreader version)</summary>
+    <summary lang="en_US">MrMC frontend for the MediaPortal TV Server (FFmpeg + TSReader version)</summary>
+    <summary lang="es_AR">Interfaz MrMC para el MediaPortal TV Server (versión ffmpeg + tsreader)</summary>
+    <summary lang="es_ES">Interfaz MrMC para el MediaPortal TV Server (versión ffmpeg + tsreader)</summary>
+    <summary lang="et_EE">MrMC esi MediaPortal TV serverile (ffmpeg + tsreader versioon)</summary>
+    <summary lang="fi_FI">MrMC frontend MediaPortal TV-serverille (ffmpeg + tsreader)</summary>
+    <summary lang="fr_CA">Frontal MrMC pour le serveur MediaPortal TV (version ffmpeg + tsreader)</summary>
     <summary lang="fr_FR">Interface logicielle pour le serveur TV de MediaPortal (version ffmpeg + tsreader)</summary>
-    <summary lang="gl_ES">O Interface do Kodi para o Servidor de TV de MediaPortal (versión de ffmpeg + tsreader)</summary>
+    <summary lang="gl_ES">O Interface do MrMC para o Servidor de TV de MediaPortal (versión de ffmpeg + tsreader)</summary>
     <summary lang="he_IL">לקוח טלוויזיה חיה עבור MediaPortal (גרסת FFmpeg ו־TSReader)</summary>
-    <summary lang="hr_HR">Kodi sučelje za MediaPortal TV poslužitelj (ffmpeg + tsreader inačica)</summary>
-    <summary lang="hu_HU">Kodi előtét a MediaPortal TV kiszolgálóhoz (ffmpeg + tsreader)</summary>
-    <summary lang="id_ID">Frontend Kodi untuk Server TV MediaPortal (versi ffmpeg + tsreader)</summary>
-    <summary lang="is_IS">Framendi fyrir Kodi til að nota MediaPortal TV Server (ffmpeg + tsreader version)</summary>
-    <summary lang="it_IT">Frontend Kodi per il server MediaPortal TV (versione ffmpeg + tsreader)</summary>
-    <summary lang="ja_JP">MediaPortal TV サーバー (ffmpeg + tsreader バージョン) の Kodi フロントエンド</summary>
-    <summary lang="ko_KR">MediaPortal TV Server (ffmpeg + tsreader version) 을 위한 Kodi 프론트엔드</summary>
-    <summary lang="lt_LT">Kodi sąsaja MediaPortal TV serveriui (ffmpeg + tsreader versija)</summary>
-    <summary lang="lv_LV">Kodi galasistēma MediaPortal TV Server (ffmpeg + tsreader versija)</summary>
-    <summary lang="mk_MK">Kodi интерфејс за MediaPortal TV Server (ffmpeg + tsreader верзија)</summary>
-    <summary lang="ms_MY">Bahagian hadapan Kodi untuk Pelayan TV MediaPortal (versi ffmpeg + tsreader)</summary>
-    <summary lang="my_MM">MediaPortal TV Server အတွက် Kodi frontend (ffmpeg + tsreader version)</summary>
-    <summary lang="nb_NO">Kodi skall for MediaPortal TV Server (ffmpeg + tsreader versjon)</summary>
-    <summary lang="nl_NL">Kodi frontend voor de Mediaportal TV Server (ffmmpeg + tsreader versie)</summary>
+    <summary lang="hr_HR">MrMC sučelje za MediaPortal TV poslužitelj (ffmpeg + tsreader inačica)</summary>
+    <summary lang="hu_HU">MrMC előtét a MediaPortal TV kiszolgálóhoz (ffmpeg + tsreader)</summary>
+    <summary lang="id_ID">Frontend MrMC untuk Server TV MediaPortal (versi ffmpeg + tsreader)</summary>
+    <summary lang="is_IS">Framendi fyrir MrMC til að nota MediaPortal TV Server (ffmpeg + tsreader version)</summary>
+    <summary lang="it_IT">Frontend MrMC per il server MediaPortal TV (versione ffmpeg + tsreader)</summary>
+    <summary lang="ja_JP">MediaPortal TV サーバー (ffmpeg + tsreader バージョン) の MrMC フロントエンド</summary>
+    <summary lang="ko_KR">MediaPortal TV Server (ffmpeg + tsreader version) 을 위한 MrMC 프론트엔드</summary>
+    <summary lang="lt_LT">MrMC sąsaja MediaPortal TV serveriui (ffmpeg + tsreader versija)</summary>
+    <summary lang="lv_LV">MrMC galasistēma MediaPortal TV Server (ffmpeg + tsreader versija)</summary>
+    <summary lang="mk_MK">MrMC интерфејс за MediaPortal TV Server (ffmpeg + tsreader верзија)</summary>
+    <summary lang="ms_MY">Bahagian hadapan MrMC untuk Pelayan TV MediaPortal (versi ffmpeg + tsreader)</summary>
+    <summary lang="my_MM">MediaPortal TV Server အတွက် MrMC frontend (ffmpeg + tsreader version)</summary>
+    <summary lang="nb_NO">MrMC skall for MediaPortal TV Server (ffmpeg + tsreader versjon)</summary>
+    <summary lang="nl_NL">MrMC frontend voor de Mediaportal TV Server (ffmmpeg + tsreader versie)</summary>
     <summary lang="pl_PL">Klient telewizyjny dla MediaPortal TV  (wersja ffmpeg + tsreader)</summary>
-    <summary lang="pt_BR">Frontend  do Kodi para Servidor de TV MediaPortal (ffmpeg + versão tsreader)</summary>
-    <summary lang="pt_PT">Frontend Kodi para o MediaPortal TV Server (versão ffmpeg + tsreader)</summary>
-    <summary lang="ro_RO">Interfața Kodi pentru MediaPortal TV Server (versiunea ffmpeg + tsreader)</summary>
-    <summary lang="ru_RU">Интерфейс Kodi для ТВ-сервера MediaPortal (версия ffmpeg + tsreader)</summary>
-    <summary lang="sk_SK">Kodi rozhranie pre MediaPortal TV server (verzia ffmpeg + tsreader)</summary>
-    <summary lang="sl_SI">Kodijev vmesnik za strežnik MediaPortal TV (ffmpeg + tsreader)</summary>
-    <summary lang="sr_RS">Kodi интерфејс за MediaPortal ТВ Сервер (ffmpeg + tsreader верзија)</summary>
-    <summary lang="sr_RS@latin">Kodi interfejs za MediaPortal TV Server (ffmpeg + tsreader verzija)</summary>
-    <summary lang="sv_SE">Kodi frontend för MediaPortal TV-server (ffmpeg + tsreader versionen)</summary>
-    <summary lang="tr_TR">MediaPortal TV Sunucusu için Kodi ön ucu (ffmpeg + tsreader sürümü)</summary>
-    <summary lang="uk_UA">Накладка Kodi для сервера ТВ MediaPortal'у  (версія ffmpeg + tsreader)</summary>
-    <summary lang="vi_VN">Giao tiếp Kodi cho MediaPortal TV Server (phiên bản ffmpeg + tsreader)</summary>
-    <summary lang="zh_CN">Kodi 的 MediaPortal TV 服务器前端（ffmpeg + tsreader版）</summary>
-    <summary lang="zh_TW">MediaPortal電視服務器的Kodi前端 (ffmpeg+tsreader版本)</summary>
+    <summary lang="pt_BR">Frontend  do MrMC para Servidor de TV MediaPortal (ffmpeg + versão tsreader)</summary>
+    <summary lang="pt_PT">Frontend MrMC para o MediaPortal TV Server (versão ffmpeg + tsreader)</summary>
+    <summary lang="ro_RO">Interfața MrMC pentru MediaPortal TV Server (versiunea ffmpeg + tsreader)</summary>
+    <summary lang="ru_RU">Интерфейс MrMC для ТВ-сервера MediaPortal (версия ffmpeg + tsreader)</summary>
+    <summary lang="sk_SK">MrMC rozhranie pre MediaPortal TV server (verzia ffmpeg + tsreader)</summary>
+    <summary lang="sl_SI">MrMCjev vmesnik za strežnik MediaPortal TV (ffmpeg + tsreader)</summary>
+    <summary lang="sr_RS">MrMC интерфејс за MediaPortal ТВ Сервер (ffmpeg + tsreader верзија)</summary>
+    <summary lang="sr_RS@latin">MrMC interfejs za MediaPortal TV Server (ffmpeg + tsreader verzija)</summary>
+    <summary lang="sv_SE">MrMC frontend för MediaPortal TV-server (ffmpeg + tsreader versionen)</summary>
+    <summary lang="tr_TR">MediaPortal TV Sunucusu için MrMC ön ucu (ffmpeg + tsreader sürümü)</summary>
+    <summary lang="uk_UA">Накладка MrMC для сервера ТВ MediaPortal'у  (версія ffmpeg + tsreader)</summary>
+    <summary lang="vi_VN">Giao tiếp MrMC cho MediaPortal TV Server (phiên bản ffmpeg + tsreader)</summary>
+    <summary lang="zh_CN">MrMC 的 MediaPortal TV 服务器前端（ffmpeg + tsreader版）</summary>
+    <summary lang="zh_TW">MediaPortal電視服務器的MrMC前端 (ffmpeg+tsreader版本)</summary>
     <description lang="af_ZA">MediaPortal TV Bediener voorprogram. Ondersteun stroom van Lewendige TV &amp; Opnames, luister na Radio kanale, EPG en Tydhouers. Hierdie byvoegsel kombineer die voormalige ffmpeg en tsreader byvoegsels.</description>
     <description lang="be_BY">MediaPortal TV Server frontend. Supports streaming of Live TV &amp; Recordings, listening to Radio channels, EPG and Timers. This addon combines the former ffmpeg and tsreader addons.</description>
-    <description lang="bg_BG">Kodi клиент за ТВ сървъра MediaPortal. Поддържа поточна телевизия и записване, слушане на радио канали, електронен програмен справочник и броячи. Добавката обединява старите добавки ffmpeg и tsreader.</description>
-    <description lang="ca_ES">Frontal Kodi de TV MediaPortal. Suporta el flux de TV en directe i enregistraments, escoltes de canals de ràdio, EPG i temporitzadors. Aquest connector combina els anteriors connectors de ffmpg i tsreader.</description>
+    <description lang="bg_BG">MrMC клиент за ТВ сървъра MediaPortal. Поддържа поточна телевизия и записване, слушане на радио канали, електронен програмен справочник и броячи. Добавката обединява старите добавки ffmpeg и tsreader.</description>
+    <description lang="ca_ES">Frontal MrMC de TV MediaPortal. Suporta el flux de TV en directe i enregistraments, escoltes de canals de ràdio, EPG i temporitzadors. Aquest connector combina els anteriors connectors de ffmpg i tsreader.</description>
     <description lang="cs_CZ">Rozhraní pro televizní server MediaPortal. Podporuje proudové vysílání živého vysílání a nahrávek, poslech kanálů rádia, EPG, a časovače. Toto rozšíření kombinuje rozšíření ffmpeg a tsreader.</description>
     <description lang="cy_GB">Blaen Gweinydd Teledu Media Portal. Mae'n cynnal ffrydio Teledu Byw a Recordiadau, gwrando ar sianeli Radio, Amserlenni Rhaglenni Electronig ac Amseryddion. Mae'r ychwanegyn yn cynnwys y cyn ychwanegion ffmpeg a tsreader.</description>
     <description lang="da_DK">MediaPortal TV server frontend. Understøtter streaming af TV og Optagelser, Radiokanaler, EPG og Timere. Denne addon kombinerer de gamle ffmpeg og tsreader addons.</description>
@@ -101,7 +101,7 @@
     <description lang="pt_BR">Frontend do Servidor de TV  do MediaPortal. Suporta streaming de TV Ao Vivo e Gravações, escutar canais de rádio, EPG e Agendamentos. Este addon combina os antigos addons ffmpeg e tsreader</description>
     <description lang="pt_PT">Interface para o servidor MediaPortal TV. Suporta transmissão de TV em direto e gravações, ouvir estações de Rádio, EPG e Temporizadores. Este add-on combina os antigos add-ons ffmpeg e tsreader.</description>
     <description lang="ro_RO">Interfața MediaPortal TV Server. Suportă streaming TV live &amp; Înregistrări, ascultarea posturilor de radio, EPG și Înregistrare programată. Acest plugin combină ex addons ffmpeg si  tsreader.</description>
-    <description lang="ru_RU">Интерфейс Kodi для ТВ-сервера MediaPortal. Поддерживает просмотр и запись ТВ, прослушивание радио, EPG и таймеры. Это дополнение заменяет старые дополнения ffmpeg и tsreader.</description>
+    <description lang="ru_RU">Интерфейс MrMC для ТВ-сервера MediaPortal. Поддерживает просмотр и запись ТВ, прослушивание радио, EPG и таймеры. Это дополнение заменяет старые дополнения ffmpeg и tsreader.</description>
     <description lang="sk_SK">Rozhranie pre MediaPortal TV server. Podporuje streamovanie živého televízneho vysielania a nahrávok, počúvanie rozhlasových kanálov, EPG a časovače. Tento doplnok zlučuje dohromady bývalé doplnky ffmpeg a tsreader.</description>
     <description lang="sl_SI">Vmesnik za MediaPortal TV strežnik. Podpira pretakanje televizije v živo &amp; posnetkov, poslušanje radia, EPG in časovnike. Ta dodatek združuje prejšnja dodatka ffmpeg in tsreader.</description>
     <description lang="sr_RS">MediaPortal ТВ Сервер интерфејс. Подржава стримовање ТВ Уживо &amp; Снимака, слушање Радио канала, EPG и Тајмере. Овај додатни програм комбинује претходне ffmpeg и tsreader додатне програме.</description>
@@ -142,7 +142,7 @@
     <disclaimer lang="it_IT">Questo software non è stabile! Gli autori non sono responsabili per registrazioni fallite, timer non corretti, ore perse, o altri effetti indesiderati...</disclaimer>
     <disclaimer lang="ja_JP">これは不安定なソフトウェアです！本プログラムの作者は、録画の失敗、正確に作動しなかったタイマー、無駄にした時間、その他あらゆる好ましくない結果について責任を負わないものとします。</disclaimer>
     <disclaimer lang="ko_KR">이 소프트웨어는 불안정합니다! 제작자는 녹화 실패, 부정확한 타이머, 시간 낭비 및 기타 예상하지 못한 결과에 대해 책임지지 않습니다..</disclaimer>
-    <disclaimer lang="lt_LT">Tai yra nestabili programinė įranga! Autorius jokiu būdu neatsakingas už nepavykusius įrašus, neteisingus laikmačius, iššvaistytas valandas ar nutikus kitiems nepageidaujamiems poveikiams ...[COLOR=red](Kodi.lt siūlo/rekomenduoja testuojant šį priedą persijungti į Anglų [orinali] kalbą)[/COLOR]</disclaimer>
+    <disclaimer lang="lt_LT">Tai yra nestabili programinė įranga! Autorius jokiu būdu neatsakingas už nepavykusius įrašus, neteisingus laikmačius, iššvaistytas valandas ar nutikus kitiems nepageidaujamiems poveikiams ...[COLOR=red](MrMC.lt siūlo/rekomenduoja testuojant šį priedą persijungti į Anglų [orinali] kalbą)[/COLOR]</disclaimer>
     <disclaimer lang="lv_LV">Šī ir nestabila programmatūra! Autori nav atbildīgi par nesanākušiem ierakstiem, nepareiziem taimeriem, iztērētām stundām vai jebkādiem citiem nevēlamiem efektiem..</disclaimer>
     <disclaimer lang="mk_MK">Ова е нестабилен софтвер! Авторите на ниту еден начин не одговараат за неуспешни снимки, неточни тајмери, потрошени часови, или било кои други несакани ефекти.</disclaimer>
     <disclaimer lang="mn_MN">Тус програм нь гүйцэд хийгдэж дуусаагүй! Зохиогч нь алдаатай бичлэг, цагийн буруу хөтлөлт, алдагдсан цаг хугацаа эсвэл бусад ямар нэгэн хүсээгүй үр дүнд хариуцлага хүлээхгүй.</disclaimer>
